Adding 3D and rotations.